@@ -1,3 +1,9 @@
+2002-11-06  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gen-engine.c (print_engine_issue_prefix_hook): Don't add the
+	global prefix to ENGINE_ISSUE_PREFIX_HOOK.
+	(print_engine_issue_postfix_hook): Likewise ENGINE_ISSUE_POSTFIX_HOOK.
+
 2002-08-28  Dave Brolley  <brolley@redhat.com>
 
 	* gen-support.c (gen_support_h): Generate
